partially solve the converter-related exceptions